# bixolon-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/2025-12-22-bixolon-printer-library/: architecture.md  brainstorming-log.md  index.md  task-01-project-foundation.md  task-02-basic-commands.md  task-03-printer-control.md  task-04-character-formatting.md  task-05-code-pages.md  task-06-spacing-positioning.md  task-07-page-mode-commands.md  task-08-paper-cutting.md  task-09-barcode-commands.md  task-10-2d-symbols.md  task-11-image-commands.md  task-12-status-query.md  task-13-macro-commands.md  task-14-styleset.md  task-15-stylednode.md  task-16-pagebuilder.md  task-17-sync-printer.md  task-18-async-printer.md  task-19-usb-transport.md  task-20-public-api.md  task-21-integration-tests.md  task-22-hardware-tests.md
src/: command.rs  error.rs  lib.rs  page.rs  printer.rs  style.rs  transport.rs
src/command/: barcode.rs  basic.rs  character.rs  codepage.rs  image.rs  macro_cmd.rs  page_mode.rs  paper.rs  printer_control.rs  spacing.rs  status.rs  symbol.rs
src/printer/: async.rs  sync.rs
src/style/: text.rs
src/transport/: usb.rs
tests/: hardware.rs  integration.rs
